update reader